# nih-plug

./: Cargo.toml
nih_plug_egui/: Cargo.toml
plugins/examples/vu/: Cargo.toml
plugins/examples/vu/src/: lib.rs
