[package]
name = "nih_plug_egui"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"

description = "An adapter to use egui GUIs with NIH-plug"

[dependencies]
nih_plug = { path = ".." }

baseview = { git = "https://github.com/robbert-vdh/baseview.git", rev = "3551d5e25329ff34b8a0e350bfd33be608cfc8ab" }
crossbeam = "0.8"
egui = "0.16"
# Upstream doesn't work with the current baseview and egui versions
egui-baseview = { git = "https://github.com/robbert-vdh/egui-baseview.git", branch = "fix/update-dependencies" }
parking_lot = "0.12"
